# tdsearch

./: CMakeLists.txt  Doxyfile  README.md  README.txt
CMakeModules/: FindTDSearch.cmake.in
example/: fileList.txt  tdsearch.ini
example/data/: CU.BCIP.BHZ.00.SAC  CU.BCIP.BHZ.00.SACPZ  II.ALE.BHZ.00.SAC  II.ALE.BHZ.00.SACPZ  II.KDAK.BHZ.00.SAC  II.KDAK.BHZ.00.SACPZ  II.OBN.BHZ.00.SAC  II.OBN.BHZ.00.SACPZ  IU.BILL.BHZ.00.SAC  IU.BILL.BHZ.00.SACPZ  IU.COLA.BHZ.00.SAC  IU.COLA.BHZ.00.SACPZ  IU.KOWA.BHZ.00.SAC  IU.KOWA.BHZ.00.SACPZ  IU.LVC.BHZ.00.SAC  IU.LVC.BHZ.00.SACPZ  IU.MA2.BHZ.00.SAC  IU.MA2.BHZ.00.SACPZ  IU.OTAV.BHZ.00.SAC  IU.OTAV.BHZ.00.SACPZ  IU.PAB.BHZ.00.SAC  IU.PAB.BHZ.00.SACPZ  IU.SAML.BHZ.00.SAC  IU.SAML.BHZ.00.SACPZ  IU.TIXI.BHZ.00.SAC  IU.TIXI.BHZ.00.SACPZ  IU.YAK.BHZ.00.SAC  IU.YAK.BHZ.00.SACPZ  IU.YSS.BHZ.00.SAC  IU.YSS.BHZ.00.SACPZ
example/imsData/: MDJ2.mod  fixHeaders.py  imsPicked.txt  pPicks.hyp  tdsearch.ini
example/imsData/wavtest/: AUX.TIXI.BHZ.00.SAC  PRI.MK31.BHZ.00.SAC  PRI.ZAA0B.BHZ.00.SAC
include/: CMakeLists.txt  config.h.in  tdsearch.h  tdsearch_commands.h  tdsearch_data.h  tdsearch_event.h  tdsearch_greens.h  tdsearch_gridsearch.h  tdsearch_hudson.h  tdsearch_struct.h
src/: commands.c  data.c  event.c  greens.c  gridsearch.c  hudson.c  tdsearch.c
