CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
PROJECT(tdSearch)
ENABLE_LANGUAGE(C)

SET(CMAKE_BUILD_TYPE Release)
# Add modules for finding requisites
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMakeModules)
# For testing
SET(CMAKE_TESTING_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/testing)
# For binaries
SET(CMAKE_BINARY_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/bin)
# For libraries
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(
${CMAKE_CURRENT_SOURCE_DIR}/include
${COMPEARTH_INCLUDE_DIR}
${INIPARSER_INCLUDE_DIR}
${PARMT_INCLUDE_DIR}
${ISCL_INCLUDE_DIR}
${H5_C_INCLUDE_DIR}
${SACIO_INCLUDE_DIR}
${ISPL_INCLUDE_DIR}
${CPS_INCLUDE_DIR}
${MPI_C_INCLUDE_PATH}
${TTIMES_INCLUDE_DIR}
)

#ADD_SUBDIRECTORY(include)
#ADD_SUBDIRECTORY(src)
SET(SRCS src/data.c src/event.c src/greens.c src/gridsearch.c src/hudson.c)

ADD_LIBRARY(tdSearch_shared SHARED ${SRCS})
ADD_EXECUTABLE(tdsearch src/tdsearch.c)

SET(LINK_LIB_ALL ${PARMT_LIBRARY} ${COMPEARTH_LIBRARY}
                 ${CPS_LIBRARY} ${SACIO_LIBRARY} ${ISPL_LIBRARY} ${ISCL_LIBRARY}
                 -Wl,--start-group ${MKL_LIBRARY} -Wl,--end-group ${IPP_LIBRARY}
                 ${TTIMES_LIBRARY} ${H5_LIBRARY}
                 ${INIPARSER_LIBRARY} ${MPI_C_LIBRARIES}
                 -lm -ldl -lpthread -lpng)
#TARGET_LINK_LIBRARIES(tdSearch tdSearch_shared) 
SET_TARGET_PROPERTIES(tdsearch PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}) 
TARGET_LINK_LIBRARIES(tdsearch tdSearch_shared ${LINK_LIB_ALL})
